--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-list{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: end;
   color: white;
+  font-family: "DotGothic16";
+  font-size: 15pt;
+  font-weight: 900;
+  background-color: rgb(132, 223, 214)
+  
+}
+li:hover{
+  background-color: rgb(9, 24, 24);
+}
+#quiz-name{
+  position: relative;
+  top:10px;
+  
+  font-family: "Libre Barcode 39 Text";
+
+  font-size: 38pt;
+  color: aquamarine;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar{
+  background-color: black;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  list-style-type: none;
+  margin: 10;
+  padding: 10;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  -webkit-text-stroke:thin rgb(104, 104, 187);
+  -webkit-text-fill-color: rgb(248, 241, 242);
+}
+
+/* Change the link color to #111 (black) on hover */
+#navhover:hover {
+  background-color: rgb(104, 104, 187);
+  color:rgb(20, 0, 36);
+  font-weight: 900;
+  border: .5px solid whitesmoke;
+  -webkit-text-stroke:0.1vh white;
+  -webkit-text-fill-color: blue;
+  opacity: 80%;
+}
+#brainimgnav{
+  border-radius: 200px;
+  height: 80px;
+  position: relative;
+  right:500px;
+  opacity: ;
 }
