--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,19 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+@font-face {
+  font-family: "Libre Barcode 39 Text";
+  src: local("Libre Barcode 39 Text"),url("./fonts/LibreBarcode39Text-Regular.ttf") format("truetype");
+  font-style: normal;
+}
+@font-face {
+  font-family:"DotGothic16" ;
+  src: local("DotGothic16"),url("./fonts/DotGothic16-Regular.ttf") format("truetype")
+}
+@font-face {
+  font-family: "Train One";
+  src: local("Train One"),url("./fonts/TrainOne-Regular.ttf")format("truetype");
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
