--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -1,11 +1,11 @@
 #armoni{
-    height: 450px;
-    width: 450px;
+    height: 500px;
+    width: 500px;
     border-radius: 20px;
 }
 .background{
-    background-color: black;
-    height:100vh;
+    background-color: rgb(0, 0, 0);
+    height:1150px;
     width:100vw;
     padding:0;
     margin:0;
@@ -94,8 +94,8 @@ input[type=text], select, textarea {
       background: rgba(103, 105, 104, 0.25);
       border-radius: 10px;
       font-size: 15pt;
-      width:400px;
-      height:455px;
+      width:500px;
+      height:500px;
       text-align: center;
       display: flex;
       flex-direction: column;
