--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -5,20 +5,23 @@
     --hue-correct:145;  
 
 }
-#playnow{
+#playnow {
     color: rgb(104, 104, 187);
     text-align: center;
     font-size: 26pt;
+    width: 100vw;
     background-color: rgb(132, 223, 214);
     padding: 0;
     margin: 0;
-    font-family:"DotGothic16" ;
+    font-family: "DotGothic16";
     height: 50px;
+    box-sizing: border-box;
 }
 
 
+
 .home-cont{
-    background-color: yellow;
+    background-color: rgb(0, 0, 0);
     height:100vh;
     width: 100vw;
 
@@ -26,7 +29,6 @@
 
 .quiz-home-half{
     height: 147px;
-   
     background-image: url("../images/Screen Shot 2021-12-02 at 11.11.30 PM.jpg");
     background-position: center;
     background-position-x: 11px;
@@ -57,17 +59,15 @@
 
 }
 
-.seperate-quizzes{
-    background-color: rgb(1, 1, 12);
+.seperate-quizzes {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
-    grid-gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Responsive columns */
+    grid-gap: 40px;  /* Space between grid items */
     align-items: center;
-    height: 1270px;
-    
-   
-
+    height: auto;    /* Let the height adjust automatically based on content */
+    padding: 20px;   /* Optional: add some padding for better spacing */
 }
+
 #quizbox1,#quizbox2,#quizbox3,#quizbox4,#quizbox5,#quizbox6, #quizbox7,#quizbox8, #quizbox9, #quizbox10, #quizbox11, #quizbox12{
     border-radius: 200px;
     height: 160px;
