--- a/src/CSS/questions.css
+++ b/src/CSS/questions.css
@@ -81,6 +81,10 @@
     border-radius: 45px;
     padding: 20px;
     box-shadow: 0 0 10px 7px rgb(120, 108, 226);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
     
 
@@ -103,20 +107,22 @@
     font-size: 25pt;
 
 }
-.btn{
+.btnz{
     --hue: var(--hue-neutral);
     border: 3px solid hsl(var(--hue),100%,30%);
-    background-color: hsl(var(--hue),10%,10%);
+  
     border-radius: 10px;
-    color:white;
+    color:rgb(0, 0, 0);
     outline: none;
     border: black 1px solid;
     font-family: 'Train One';
     color: turquoise;
+    padding: revert;
 }
 
 .btn:hover{
-    background-color: aqua;
+    background-color: rgb(10, 201, 201);
+    color:red
     
     
 }
@@ -164,7 +170,7 @@ font-size: 40pt;
 }
 #question{
     font-family: 'Train One', cursive;
-    
+    color: black
 }
 
 #RESET{
@@ -198,9 +204,7 @@ font-size: 40pt;
     opacity: 85%;
     border:4px black solid;
 }
-#container-quest1{
-    
-}
+
 .positionscore{
     display: flex;
     justify-content: center;
@@ -228,9 +232,6 @@ font-size: 40pt;
     border-radius: 25px;
     font-size: 20pt;
     border:black 2px solid;
-    position: relative;
-    bottom:125px;
-    left:345px;
     text-align: center;
     font-family: "Train One";
     padding: 10px;
